<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/textViewFormulario"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/formulario"
                android:textAlignment="center"
                android:textSize="26sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/maincolor"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/nombres"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextNombres"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/apellidos"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextApellidos"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/usuario"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextUsuario"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/clave"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextClave"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                app:passwordToggleEnabled="true"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/correo"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextCorreo"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/celular"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextCelular"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="number"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/favorito"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextFavorito"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/buttonRegistrar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/maincolor"
                android:onClick="registrar"
                android:text="@string/registrarse"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/buttonVolver"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:backgroundTint="@color/maincolor"
                android:onClick="regresar"
                android:text="@string/regresar"
                android:textColor="@color/white" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>