<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="173dp"
            app:srcCompat="@drawable/logo"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/textViewUsuario"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            android:textSize="22sp"/>

        <EditText
            android:id="@+id/editTextUsuario"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/usuario"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textViewClave"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/clave"
            android:textSize="22sp"/>

        <EditText
            android:id="@+id/editTextClave"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/clave"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/maincolor"
            android:textColor="@color/white"
            android:onClick="ingresar"
            android:text="@string/ingresar" />

        <Button
            android:id="@+id/button2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/maincolor"
            android:textColor="@color/white"
            android:onClick="crearCuenta"
            android:text="@string/crearCuenta" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>